[gd_scene load_steps=6 format=2]

[ext_resource path="res://circle.png" type="Texture" id=1]
[ext_resource path="res://Scripts/PositionVisual.gd" type="Script" id=2]
[ext_resource path="res://triangle.png" type="Texture" id=3]
[ext_resource path="res://Edit_icon.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 31.9126

[node name="Position" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 0.807843, 0.501961, 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Name Label" type="Label" parent="."]
margin_left = -30.0
margin_top = -51.0
margin_right = 30.0
margin_bottom = -34.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArgLabel" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = -32.0
margin_top = -23.0
margin_right = 32.0
margin_bottom = 22.0
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Position In2" type="Position2D" parent="."]
position = Vector2( 38.15, -11.2016 )

[node name="Position Out2" type="Position2D" parent="."]
position = Vector2( 30.525, 12.1404 )

[node name="Position In" type="Position2D" parent="."]
position = Vector2( -38.5224, -12.4701 )

[node name="Position Out" type="Position2D" parent="."]
position = Vector2( -30.1872, 12.2979 )

[node name="t1" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 0.6, 0.301961, 1 )
position = Vector2( -34.3924, -12.3405 )
scale = Vector2( 0.0538061, 0.0763281 )
texture = ExtResource( 3 )

[node name="t2" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 0.6, 0.301961, 1 )
position = Vector2( 33.9826, -11.2155 )
scale = Vector2( -0.054, 0.076 )
texture = ExtResource( 3 )

[node name="EditButton" type="TextureButton" parent="."]
margin_left = 22.5
margin_top = -43.5
margin_right = 42.5
margin_bottom = -23.5
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EditPopup" type="WindowDialog" parent="."]
visible = true
margin_left = 57.0
margin_top = -12.0
margin_right = 208.0
margin_bottom = 229.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="EditPopup"]
margin_left = 8.4635
margin_top = 8.01808
margin_right = 48.4635
margin_bottom = 22.0181
text = "Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameText" type="LineEdit" parent="EditPopup"]
margin_left = 9.0
margin_top = 25.0
margin_right = 141.0
margin_bottom = 49.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Type" type="Label" parent="EditPopup"]
margin_left = 8.46353
margin_top = 54.7903
margin_right = 53.4635
margin_bottom = 68.7903
text = "Type"

[node name="TypeScroll" type="OptionButton" parent="EditPopup"]
margin_left = 12.0
margin_top = 71.0
margin_right = 141.0
margin_bottom = 91.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Private" type="Control" parent="EditPopup"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="EditPopup/Private"]
margin_left = 8.46353
margin_top = 113.335
margin_right = 125.464
margin_bottom = 127.335
text = "Number of Tokens"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TokenText" type="LineEdit" parent="EditPopup/Private"]
margin_left = 10.0
margin_top = 131.0
margin_right = 68.0
margin_bottom = 155.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shared" type="Control" parent="EditPopup"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="EditPopup/Shared"]
margin_left = 8.46353
margin_top = 112.835
margin_right = 131.464
margin_bottom = 126.835
text = "Shared Place Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SharedText" type="LineEdit" parent="EditPopup/Shared"]
margin_left = 10.0
margin_top = 130.5
margin_right = 140.0
margin_bottom = 154.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Public" type="Control" parent="EditPopup"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="EditPopup/Public"]
margin_left = 8.46353
margin_top = 99.3353
margin_right = 125.464
margin_bottom = 113.335
text = "Public Position"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="EditPopup/Public"]
margin_left = 8.0
margin_top = 123.054
margin_right = 31.0
margin_bottom = 137.054
text = "X:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="XText" type="LineEdit" parent="EditPopup/Public"]
margin_left = 26.0
margin_top = 117.0
margin_right = 84.0
margin_bottom = 141.0

[node name="Label4" type="Label" parent="EditPopup/Public"]
margin_left = 8.0
margin_top = 155.008
margin_right = 31.0
margin_bottom = 169.008
text = "Y:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YText" type="LineEdit" parent="EditPopup/Public"]
margin_left = 26.0
margin_top = 148.954
margin_right = 84.0
margin_bottom = 172.954

[node name="SaveChangesButt" type="Button" parent="EditPopup"]
margin_left = 11.0
margin_top = 185.0
margin_right = 140.0
margin_bottom = 205.0
text = "Save Changes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeleteButt" type="Button" parent="EditPopup"]
margin_left = 13.0
margin_top = 214.0
margin_right = 140.0
margin_bottom = 234.0
text = "Delete"

[node name="PopupPos" type="Position2D" parent="."]
position = Vector2( 50.7813, -37.8632 )
__meta__ = {
"_gizmo_extents_": 75.8
}

[connection signal="input_event" from="." to="." method="_on_Position_input_event"]
[connection signal="pressed" from="EditButton" to="." method="_on_EditButton_pressed"]
[connection signal="item_selected" from="EditPopup/TypeScroll" to="." method="_on_TypeScroll_item_selected"]
[connection signal="toggled" from="EditPopup/TypeScroll" to="." method="_on_TypeScroll_toggled"]
[connection signal="pressed" from="EditPopup/SaveChangesButt" to="." method="_on_SaveChangesButt_pressed"]
[connection signal="pressed" from="EditPopup/DeleteButt" to="." method="_on_DeleteButt_pressed"]
